* Added CWnd::OnDestroy. Called automatically when a window is destroyed.
* CWnd::CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
   the menu parameter to specify a menu for a parent window, or a window ID
   for a child window.



Changes in detail
-----------------
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Added CWnd::OnClose
- Added CWnd::OnDestroy
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CMDIChild::OnClose           now returns void.
- Modified CSocket::Receive             uses char instead of TCHAR
- Modified CSocket::RecieveFrom         uses char instead of TCHAR
- Modified CSocket::Send                uses char instead of TCHAR
- Modified CSocket::SendTo              uses char instead of TCHAR
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified CWnd::CreateEx               now uses HMENU instead of CMenu*
- Modified CWnd::DeferWindowPos			now uses CWnd* for second argument

Added IDW_READY resource for ready string.
Added VS2013 project files
Updated the tutorials to take advantage of the new features.

Incompatibilities with previous versions
----------------------------------------
* The CSocket functions: Receive; ReceiveFrom; Send; and SendTo now use char
* Programs with frames should now use the IDW_READY resource for "Ready". Add IDW_READY
   as a string resource to resource.rc


Version 7.3
===========

New Features and Enhancements
-----------------------------
* Adjusted the frame's appearance
	- Updated the visual appearance of popup menus on systems using Windows Aero. On 
	  systems with Aero, popup menus are rendered with Windows Visual Styles. Systems
	  without Aero continue to use the Win32++ theme for popup menus.
	- Frames now honour the current window theme's menu and status fonts.